--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
@@ -238,7 +238,7 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JAb-jy-yeI">
-                    <rect key="frame" x="6" y="261" width="345" height="44"/>
+                    <rect key="frame" x="6" y="261" width="314" height="44"/>
                     <subviews>
                         <button opaque="NO" tag="34" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xcW-Do-IB6">
                             <rect key="frame" x="0.0" y="7" width="31" height="30"/>
@@ -266,16 +266,16 @@
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="WG6-ci-MgC"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="31" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hpT-XA-5tk">
-                            <rect key="frame" x="117" y="7" width="61" height="30"/>
+                        <button opaque="NO" tag="37" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hpT-XA-5tk">
+                            <rect key="frame" x="117" y="7" width="30" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="JsonTest"/>
+                            <state key="normal" title="37"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="0gB-VJ-zef"/>
                             </connections>
                         </button>
                         <button opaque="NO" tag="32" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="exk-cw-byH">
-                            <rect key="frame" x="186" y="7" width="77" height="30"/>
+                            <rect key="frame" x="155" y="7" width="77" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="结构化并发"/>
                             <connections>
@@ -283,7 +283,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="33" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZr-JR-iXt">
-                            <rect key="frame" x="271" y="7" width="74" height="30"/>
+                            <rect key="frame" x="240" y="7" width="74" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="Range测试"/>
                             <connections>
